--- a/src/country/country.css
+++ b/src/country/country.css
@@ -3,7 +3,7 @@
     border-radius: 10px;
     height: 6rem;
     text-align: center;
-    background-color:#101920 ;
+    background-color:#F06D26 ;
     color: #fff;
 }
 .main-country .card .h5{
