--- a/src/Detials/detials.css
+++ b/src/Detials/detials.css
@@ -1,12 +1,15 @@
 .card{
     width: 16rem;
     border-radius: 10px;
+    transition:transform 3s ease;
+
 }
+
 .main1 button{
     padding: 3px 11px;
     margin-inline-start: 23%;
-    background-color: orange;
-    color: white;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     border: none;
     border-radius: 12px;
     box-shadow: 1px 1px 2px 1px black;
@@ -14,13 +17,17 @@
 body{
     padding: 0;
     margin: 0;
-    background-color: #FFE715;
+    background-color: #fff;
 }
 h1{
-    color: #101920;
+    color: #F06D26;
     font-family: "Protest Riot", sans-serif;
     font-weight: 400;
    padding-top: 2rem;
    text-align: center;
    text-decoration: underline;
+}
+.detcard{
+    background-color: #F06D26;
+    border: none;
 }
