--- a/src/navbar/nav.css
+++ b/src/navbar/nav.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Honk&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:opsz,wght@6..12,200&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Protest+Guerrilla&family=Protest+Riot&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Honk&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:opsz,wght@6..12,200&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Protest+Guerrilla&family=Protest+Riot&family=Workbench&display=swap');
 .items-nav{
     font-size: 17px;
     font-weight: 700;
-    color: #FFE715;
+    color: #fff;
  
     font-family: "Prompt", sans-serif;
 
@@ -12,21 +12,22 @@
    
 }
 .brand{
-    font-size: 25px;
+    font-size: 30px;
     font-weight: 900;
     color: rgb(255, 255, 255);
-    font-family: "Bungee Spice", sans-serif;
+    font-family: "Workbench", sans-serif;
+    letter-spacing: 2px;
 }
 .navbar{
     height: 6rem;
 }
 .nav-links{
-    background:#f8f9fa00;
+    background: #F06D26;
     position: relative;
     z-index: 1;
     text-align: center;
    
 }
 .main-nav{
-    background-color: #101920;
+    background-color: #F06D26;
 }
